fixing menu z-index

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -16,3 +16,7 @@
 #toast-container > div {
   opacity:1;
 }
+
+bs-dropdown-container {
+  z-index: 1;
+}
